BUGFIX: Show toggle button for right sidebar when collapsed

--- a/packages/neos-ui/src/Containers/RightSideBar/style.css
+++ b/packages/neos-ui/src/Containers/RightSideBar/style.css
@@ -21,6 +21,11 @@
     top: 0;
     border: none;
     background: var(--colors-ContrastDarkest);
+
+    /* FIXME: Hide toggle btn in fullscreen mode */
+    .rightSideBar--isHidden & {
+        right: 100%;
+    }
 }
 
 .rightSideBar__components {
